# Objekt_Projekt

./: CMakeLists.txt  main.cpp
Maze/: maze.cpp  maze.h
Solver/: DFSSolver.cpp  DFSSolver.h
Support/: appConfig.h  findWidthAndHeight.cpp  findWidthAndHeight.h  support.h
